.happypack/s-452512521
SyntaxError: JSX value should be either an expression or a quoted JSX text (130:27)

[0m [90m 128 | [39m          [33m<[39m[33mRow[39m[33m>[39m
 [90m 129 | [39m            [33m<[39m[33mCol[39m xs[33m=[39m{[35m12[39m}[33m>[39m
[31m[1m>[22m[39m[90m 130 | [39m              [33m<[39m[33mPaper[39m style[33m=[39m({[32m'padding'[39m[33m:[39m[32m'20px'[39m})[33m>[39m
 [90m     | [39m                           [31m[1m^[22m[39m
 [90m 131 | [39m                [33m<[39m[33mSchemaForm[39m schema[33m=[39m{[36mthis[39m[33m.[39mstate[33m.[39mschema} form[33m=[39m{[36mthis[39m[33m.[39mstate[33m.[39mform} model[33m=[39m{[36mthis[39m[33m.[39mstate[33m.[39mmodel} onModelChange[33m=[39m{[36mthis[39m[33m.[39monModelChange} mapper[33m=[39m{mapper}[35m/> {/[39m[33m*[39m {[36mthis[39m[33m.[39mstate[33m.[39mmodel} [33m*[39m[33m/[39m}
 [90m 132 | [39m
 [90m 133 | [39m                [33m<[39m[33mh3[39m[33m>[39m[33mModel[39m[33m:[39m[33m<[39m[33m/[39m[33mh3[39m[33m>[39m[0m

BabelLoaderError: SyntaxError: JSX value should be either an expression or a quoted JSX text (130:27)

[0m [90m 128 | [39m          [33m<[39m[33mRow[39m[33m>[39m
 [90m 129 | [39m            [33m<[39m[33mCol[39m xs[33m=[39m{[35m12[39m}[33m>[39m
[31m[1m>[22m[39m[90m 130 | [39m              [33m<[39m[33mPaper[39m style[33m=[39m({[32m'padding'[39m[33m:[39m[32m'20px'[39m})[33m>[39m
 [90m     | [39m                           [31m[1m^[22m[39m
 [90m 131 | [39m                [33m<[39m[33mSchemaForm[39m schema[33m=[39m{[36mthis[39m[33m.[39mstate[33m.[39mschema} form[33m=[39m{[36mthis[39m[33m.[39mstate[33m.[39mform} model[33m=[39m{[36mthis[39m[33m.[39mstate[33m.[39mmodel} onModelChange[33m=[39m{[36mthis[39m[33m.[39monModelChange} mapper[33m=[39m{mapper}[35m/> {/[39m[33m*[39m {[36mthis[39m[33m.[39mstate[33m.[39mmodel} [33m*[39m[33m/[39m}
 [90m 132 | [39m
 [90m 133 | [39m                [33m<[39m[33mh3[39m[33m>[39m[33mModel[39m[33m:[39m[33m<[39m[33m/[39m[33mh3[39m[33m>[39m[0m

    at transpile (/home/leo/htdocs/bio/node_modules/babel-loader/lib/index.js:61:13)
    at Object.module.exports (/home/leo/htdocs/bio/node_modules/babel-loader/lib/index.js:163:20)
    at applySyncOrAsync (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/home/leo/htdocs/bio/node_modules/happypack/lib/HappyWorker.js:32:3)
    at Object.compile (/home/leo/htdocs/bio/node_modules/happypack/lib/HappyForegroundThreadPool.js:61:14)
    at HappyPlugin.compileAndUpdateCache (/home/leo/htdocs/bio/node_modules/happypack/lib/HappyPlugin.js:344:14)
    at HappyPlugin.compileInForeground (/home/leo/htdocs/bio/node_modules/happypack/lib/HappyPlugin.js:321:25)
    at HappyPlugin.compile (/home/leo/htdocs/bio/node_modules/happypack/lib/HappyPlugin.js:237:32)
    at Object.HappyLoader (/home/leo/htdocs/bio/node_modules/happypack/lib/HappyLoader.js:42:15)
    at LOADER_EXECUTION (/home/leo/htdocs/bio/node_modules/loader-runner/lib/LoaderRunner.js:119:14)